--- a/index.html
+++ b/index.html
@@ -7,81 +7,79 @@
   <style>
     :root{
       --bg:#ffffff; --fg:#1f2937; --muted:#6b7280;
-      --card:#f8fafc; --border:#e5e7eb;
-      --accent:#2563eb; --shadow:0 1px 3px rgba(0,0,0,.08);
+      --panel:#f3f6fb;        
+      --card:#ffffff;         
+      --border:#e5e7eb;       
+      --accent:#2563eb;
+      --shadow:0 1px 3px rgba(0,0,0,.06), 0 6px 20px rgba(0,0,0,.05);
     }
     *{box-sizing:border-box}
-    body{
-      margin:0; font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
-      background:var(--bg); color:var(--fg);
-    }
+    body{margin:0; font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial; background:var(--bg); color:var(--fg)}
 
-    header{
-      padding:28px 20px 12px;
-      text-align:center;
-    }
-    header h1{
-      margin:0 0 10px; font-size:clamp(22px,2.8vw,32px); font-weight:700;
-    }
-    header p{margin:0;color:var(--muted)}
+    header{padding:28px 20px 12px; text-align:center}
+    header h1{margin:0 0 10px; font-size:clamp(22px,2.8vw,32px); font-weight:700}
+    header p{margin:0; color:var(--muted)}
 
-    .section{padding:20px}
-    .section h2{margin:0 0 14px;font-size:clamp(18px,2.2vw,24px)}
+    
+    .section{
+      margin:22px; padding:18px;
+      background:linear-gradient(180deg, rgba(238,243,252,.65), rgba(245,248,255,.65));
+      border:1px solid var(--border);
+      border-radius:18px;
+      box-shadow:var(--shadow);
+    }
+    .section h2{margin:0 4px 14px; font-size:clamp(18px,2.2vw,24px)}
 
     .grid{
       display:grid; gap:18px;
-      grid-template-columns:repeat(2,minmax(0,1fr));
+      grid-template-columns:repeat(2, minmax(0,1fr));
     }
-    @media (max-width: 980px){
-      .grid{grid-template-columns:1fr;}
-    }
+    @media (max-width: 980px){ .grid{grid-template-columns:1fr} }
 
     .card{
       display:flex; flex-direction:column;
       background:var(--card);
       border:1px solid var(--border);
-      border-radius:16px;
-      overflow:hidden;
-      min-height:360px;
-      box-shadow:var(--shadow);
+      border-radius:16px; overflow:hidden;
+      min-height:360px; box-shadow:var(--shadow);
     }
     .card header{
       display:flex; align-items:center; justify-content:space-between;
-      padding:10px 12px 8px;
-      background:#fff; border-bottom:1px solid var(--border);
+      padding:10px 12px 8px; background:#fff; border-bottom:1px solid var(--border)
     }
-    .card h3{margin:0;font-size:15px;font-weight:600}
+    .card h3{margin:0; font-size:15px; font-weight:600}
 
     .btn{
-      appearance:none;
-      border:1px solid var(--border);
-      background:#fff;
-      color:var(--fg);
-      font-size:13px; padding:6px 10px;
-      border-radius:10px; cursor:pointer;
-      transition:all .15s ease;
+      appearance:none; border:1px solid var(--border); background:#fff; color:var(--fg);
+      font-size:13px; padding:6px 10px; border-radius:10px; cursor:pointer; transition:.15s;
     }
-    .btn:hover{border-color:#cbd5e1;background:#f1f5f9}
+    .btn:hover{border-color:#cbd5e1; background:#f1f5f9}
 
+    /* Frame mit skalierbarem Inhalt
+       --s = Scale-Faktor (1 = keine Skalierung; 0.9 = 90% usw.) */
     .frame-wrap{
-      flex:1; /* füllt restlichen Platz */
-      min-height:320px;
+      position:relative; overflow:hidden; background:#fff;
+      height:520px;           /* sichtbare Höhe der Karte */
+      --s: 0.80;              /* <— hier globaler Standard-Scale */
     }
     .frame-wrap iframe{
-      width:100%; height:100%;
+      transform: scale(var(--s));
+      transform-origin: 0 0;
+      width: calc(100% / var(--s));
+      height: calc(100% / var(--s));
       border:0; display:block;
     }
 
-    footer{color:var(--muted);padding:28px 20px;text-align:center}
+    footer{color:var(--muted); padding:28px 20px 40px; text-align:center}
   </style>
 </head>
 <body>
   <header>
     <h1>In search of truth: Evaluating concordance of AI-based anatomy segmentation models</h1>
-    <p>Klicke auf <em>Open</em>, um einen Plot in einem neuen Tab zu öffnen. Die eingebetteten Plots bleiben interaktiv.</p>
+    <p>Click <em>Open</em> to open a plot in a new tab. Embedded plots remain interactive.</p>
   </header>
 
-  <!-- Beispiel: Lung -->
+  <!-- Lung -->
   <section class="section" id="lung">
     <h2>Lung</h2>
     <div class="grid">
@@ -90,7 +88,7 @@
           <h3>Volume</h3>
           <button class="btn" onclick="openPlot('volume_plots/Overlap_percent_of_model_volumes_grouped_lung.html')">Open</button>
         </header>
-        <div class="frame-wrap">
+        <div class="frame-wrap" style="--s:.90">
           <iframe src="volume_plots/Overlap_percent_of_model_volumes_grouped_lung.html" title="Lung Volume Plot" loading="lazy"></iframe>
         </div>
       </div>
@@ -99,22 +97,117 @@
           <h3>Dice</h3>
           <button class="btn" onclick="openPlot('dice_plots/Dice_scatter_interactive_lung.html')">Open</button>
         </header>
-        <div class="frame-wrap">
+        <div class="frame-wrap" style="--s:.90">
           <iframe src="dice_plots/Dice_scatter_interactive_lung.html" title="Lung Dice Plot" loading="lazy"></iframe>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- hier analog Heart, Ribs, Vertebrae, Sternum ... -->
-  <!-- (du kannst deine restlichen Abschnitte einfach kopieren und Pfade anpassen) -->
+  <!-- Heart -->
+  <section class="section" id="heart">
+    <h2>Heart</h2>
+    <div class="grid">
+      <div class="card">
+        <header>
+          <h3>Volume</h3>
+          <button class="btn" onclick="openPlot('volume_plots/Overlap_percent_of_model_volumes_grouped_heart.html')">Open</button>
+        </header>
+        <div class="frame-wrap" style="--s:.90">
+          <iframe src="volume_plots/Overlap_percent_of_model_volumes_grouped_heart.html" title="Heart Volume Plot" loading="lazy"></iframe>
+        </div>
+      </div>
+      <div class="card">
+        <header>
+          <h3>Dice</h3>
+          <button class="btn" onclick="openPlot('dice_plots/Dice_scatter_interactive_heart.html')">Open</button>
+        </header>
+        <div class="frame-wrap" style="--s:.90">
+          <iframe src="dice_plots/Dice_scatter_interactive_heart.html" title="Heart Dice Plot" loading="lazy"></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Ribs -->
+  <section class="section" id="ribs">
+    <h2>Ribs 3–6</h2>
+    <div class="grid">
+      <div class="card">
+        <header>
+          <h3>Volume</h3>
+          <button class="btn" onclick="openPlot('volume_plots/Overlap_percent_of_model_volumes_grouped_ribs_3-6.html')">Open</button>
+        </header>
+        <div class="frame-wrap" style="--s:.90">
+          <iframe src="volume_plots/Overlap_percent_of_model_volumes_grouped_ribs_3-6.html" title="Ribs Volume Plot" loading="lazy"></iframe>
+        </div>
+      </div>
+      <div class="card">
+        <header>
+          <h3>Dice</h3>
+          <button class="btn" onclick="openPlot('dice_plots/Dice_scatter_interactive_ribs.html')">Open</button>
+        </header>
+        <div class="frame-wrap" style="--s:.90">
+          <iframe src="dice_plots/Dice_scatter_interactive_ribs.html" title="Ribs Dice Plot" loading="lazy"></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Vertebrae -->
+  <section class="section" id="vertebrae">
+    <h2>Vertebrae T2–T10</h2>
+    <div class="grid">
+      <div class="card">
+        <header>
+          <h3>Volume</h3>
+          <button class="btn" onclick="openPlot('volume_plots/Overlap_percent_of_model_volumes_grouped_Vertebrae_T_2-10.html')">Open</button>
+        </header>
+        <div class="frame-wrap" style="--s:.90">
+          <iframe src="volume_plots/Overlap_percent_of_model_volumes_grouped_Vertebrae_T_2-10.html" title="Vertebrae Volume Plot" loading="lazy"></iframe>
+        </div>
+      </div>
+      <div class="card">
+        <header>
+          <h3>Dice</h3>
+          <button class="btn" onclick="openPlot('dice_plots/Dice_scatter_interactive_vertebrae.html')">Open</button>
+        </header>
+        <div class="frame-wrap" style="--s:.90">
+          <iframe src="dice_plots/Dice_scatter_interactive_vertebrae.html" title="Vertebrae Dice Plot" loading="lazy"></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Sternum -->
+  <section class="section" id="sternum">
+    <h2>Sternum</h2>
+    <div class="grid">
+      <div class="card">
+        <header>
+          <h3>Volume</h3>
+          <button class="btn" onclick="openPlot('volume_plots/Overlap_percent_of_model_volumes_grouped_sternum.html')">Open</button>
+        </header>
+        <div class="frame-wrap" style="--s:.90">
+          <iframe src="volume_plots/Overlap_percent_of_model_volumes_grouped_sternum.html" title="Sternum Volume Plot" loading="lazy"></iframe>
+        </div>
+      </div>
+      <div class="card">
+        <header>
+          <h3>Dice</h3>
+          <button class="btn" onclick="openPlot('dice_plots/Dice_scatter_interactive_sternum.html')">Open</button>
+        </header>
+        <div class="frame-wrap" style="--s:.90">
+          <iframe src="dice_plots/Dice_scatter_interactive_sternum.html" title="Sternum Dice Plot" loading="lazy"></iframe>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <footer>© SegVerify Interactive Plots</footer>
 
   <script>
-    function openPlot(url){
-      window.open(url,'_blank','noopener,noreferrer');
-    }
+    function openPlot(url){ window.open(url,'_blank','noopener,noreferrer'); }
   </script>
 </body>
 </html>
