--- a/index.html
+++ b/index.html
@@ -69,6 +69,21 @@
       height: calc(100% / var(--s));
       border:0; display:block;
     }
+    .section-title {
+    display:flex; align-items:center; justify-content:space-between;
+    gap:8px; margin:0 4px 14px;
+    }
+    .section-title a {
+    color: inherit; text-decoration:none; font-size:clamp(18px,2.2vw,24px); font-weight:600;
+    }
+    .section-title a:hover { text-decoration:underline; }
+    .section-title .jump {
+    display:inline-flex; align-items:center; justify-content:center;
+    width:34px; height:34px; border-radius:10px;
+    border:1px solid var(--border); background:#fff; cursor:pointer;
+    }
+    .section-title .jump:hover { background:#f1f5f9; border-color:#cbd5e1; }
+    .section-title .jump svg { width:18px; height:18px; }
 
     footer{color:var(--muted); padding:28px 20px 40px; text-align:center}
   </style>
@@ -131,7 +146,14 @@
 
   <!-- Ribs -->
   <section class="section" id="ribs">
-    <h2>Ribs 3–6</h2>
+    <div class="section-title">
+      <a href="ribs.html" title="Open Ribs page">Ribs 3–6</a>
+      <button class="jump" onclick="openPlot('ribs.html')" title="Open Ribs page">
+        <svg viewBox="0 0 24 24" fill="none" stroke="#374151" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M7 17L17 7M7 7h10v10"/>
+        </svg>
+      </button>
+    </div>
     <div class="grid">
       <div class="card">
         <header>
@@ -156,7 +178,14 @@
 
   <!-- Vertebrae -->
   <section class="section" id="vertebrae">
-    <h2>Vertebrae T2–T10</h2>
+    <div class="section-title">
+      <a href="vertebrae.html" title="Open Vertebrae page">Vertebrae T2–T10</a>
+      <button class="jump" onclick="openPlot('vertebrae.html')" title="Open Vertebrae page">
+        <svg viewBox="0 0 24 24" fill="none" stroke="#374151" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M7 17L17 7M7 7h10v10"/>
+        </svg>
+      </button>
+    </div>
     <div class="grid">
       <div class="card">
         <header>
