--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     header h1{margin:0 0 10px; font-size:clamp(22px,2.8vw,32px); font-weight:700}
     header p{margin:0; color:var(--muted)}
 
-    
     .section{
       margin:22px; padding:18px;
       background:linear-gradient(180deg, rgba(238,243,252,.65), rgba(245,248,255,.65));
@@ -28,7 +27,6 @@
       border-radius:18px;
       box-shadow:var(--shadow);
     }
-    .section h2{margin:0 4px 14px; font-size:clamp(18px,2.2vw,24px)}
 
     .grid{
       display:grid; gap:18px;
@@ -55,12 +53,27 @@
     }
     .btn:hover{border-color:#cbd5e1; background:#f1f5f9}
 
-    /* Frame mit skalierbarem Inhalt
-       --s = Scale-Faktor (1 = keine Skalierung; 0.9 = 90% usw.) */
+    .section-title {
+      display:flex; align-items:center; justify-content:space-between;
+      gap:8px; margin:0 4px 14px;
+    }
+    .section-title a {
+      color: inherit; text-decoration:none; font-size:clamp(18px,2.2vw,24px); font-weight:600;
+    }
+    .section-title a:hover { text-decoration:underline; }
+    .section-title .jump {
+      display:inline-flex; align-items:center; justify-content:center;
+      width:34px; height:34px; border-radius:10px;
+      border:1px solid var(--border); background:#fff;
+      text-decoration:none;
+    }
+    .section-title .jump:hover { background:#f1f5f9; border-color:#cbd5e1; }
+    .section-title .jump svg { width:18px; height:18px; }
+
     .frame-wrap{
       position:relative; overflow:hidden; background:#fff;
-      height:520px;           /* sichtbare Höhe der Karte */
-      --s: 0.01;              /* <— hier globaler Standard-Scale */
+      height:520px;           
+      --s: .90;               
     }
     .frame-wrap iframe{
       transform: scale(var(--s));
@@ -69,21 +82,6 @@
       height: calc(100% / var(--s));
       border:0; display:block;
     }
-    .section-title {
-    display:flex; align-items:center; justify-content:space-between;
-    gap:8px; margin:0 4px 14px;
-    }
-    .section-title a {
-    color: inherit; text-decoration:none; font-size:clamp(18px,2.2vw,24px); font-weight:600;
-    }
-    .section-title a:hover { text-decoration:underline; }
-    .section-title .jump {
-    display:inline-flex; align-items:center; justify-content:center;
-    width:34px; height:34px; border-radius:10px;
-    border:1px solid var(--border); background:#fff; cursor:pointer;
-    }
-    .section-title .jump:hover { background:#f1f5f9; border-color:#cbd5e1; }
-    .section-title .jump svg { width:18px; height:18px; }
 
     footer{color:var(--muted); padding:28px 20px 40px; text-align:center}
   </style>
@@ -96,7 +94,9 @@
 
   <!-- Lung -->
   <section class="section" id="lung">
-    <h2>Lung</h2>
+    <h2 class="section-title">
+      <span>Lung</span>
+    </h2>
     <div class="grid">
       <div class="card">
         <header>
@@ -121,7 +121,9 @@
 
   <!-- Heart -->
   <section class="section" id="heart">
-    <h2>Heart</h2>
+    <h2 class="section-title">
+      <span>Heart</span>
+    </h2>
     <div class="grid">
       <div class="card">
         <header>
@@ -148,11 +150,11 @@
   <section class="section" id="ribs">
     <div class="section-title">
       <a href="ribs.html" title="Open Ribs page">Ribs 3–6</a>
-      <button class="jump" onclick="openPlot('ribs.html')" title="Open Ribs page">
+      <a class="jump" href="ribs.html" title="Open Ribs page">
         <svg viewBox="0 0 24 24" fill="none" stroke="#374151" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M7 17L17 7M7 7h10v10"/>
         </svg>
-      </button>
+      </a>
     </div>
     <div class="grid">
       <div class="card">
@@ -180,11 +182,11 @@
   <section class="section" id="vertebrae">
     <div class="section-title">
       <a href="vertebrae.html" title="Open Vertebrae page">Vertebrae T2–T10</a>
-      <button class="jump" onclick="openPlot('vertebrae.html')" title="Open Vertebrae page">
+      <a class="jump" href="vertebrae.html" title="Open Vertebrae page">
         <svg viewBox="0 0 24 24" fill="none" stroke="#374151" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M7 17L17 7M7 7h10v10"/>
         </svg>
-      </button>
+      </a>
     </div>
     <div class="grid">
       <div class="card">
@@ -210,7 +212,9 @@
 
   <!-- Sternum -->
   <section class="section" id="sternum">
-    <h2>Sternum</h2>
+    <h2 class="section-title">
+      <span>Sternum</span>
+    </h2>
     <div class="grid">
       <div class="card">
         <header>
