--- a/index.html
+++ b/index.html
@@ -82,15 +82,58 @@
       height: calc(100% / var(--s));
       border:0; display:block;
     }
+    header p.lead {
+    margin: 8px auto 14px;
+    color: var(--muted);
+    max-width: 1100px;
+    }
+
+    .subnav {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    padding: 10px 0 4px;
+    }
+    .subnav a {
+    text-decoration: none;
+    color: var(--fg);
+    border: 1px solid var(--border);
+    background: #fff;
+    padding: 8px 12px;
+    border-radius: 999px;
+    font-size: 14px;
+    transition: background .15s ease, border-color .15s ease, transform .05s ease;
+    }
+    .subnav a:hover { background: #f1f5f9; border-color: #cbd5e1; }
+    .subnav a:active { transform: translateY(1px); }
 
     footer{color:var(--muted); padding:28px 20px 40px; text-align:center}
   </style>
 </head>
 <body>
-  <header>
-    <h1>In search of truth: Evaluating concordance of AI-based anatomy segmentation models</h1>
-    <p>Click <em>Open</em> to open a plot in a new tab. Embedded plots remain interactive.</p>
-  </header>
+    <header>
+        <h1>In search of truth: Evaluating concordance of AI-based anatomy segmentation models</h1>
+      
+        <p class="lead">
+          This website presents the interactive plots accompanying the report
+          <em>“In search of truth: Evaluating concordance of AI-based anatomy segmentation models.”</em>
+          The startpage shows <strong>Volume</strong> and <strong>Dice</strong> plots for the groups
+          <em>Lung</em>, <em>Heart</em>, <em>Ribs</em>, <em>Vertebrae</em>, and <em>Sternum</em>,
+          each including <strong>all</strong> models considered in the analysis.
+          For some groups, dedicated sub-pages provide additional plots based on our findings.
+          All plots are fully interactive: you can zoom, pan, and toggle models in the legend.
+          Use <strong>Open</strong> to launch the respective plot in a new window.
+        </p>
+      
+        <nav class="subnav" aria-label="Section navigation">
+          <a href="#lung">Lung</a>
+          <a href="#heart">Heart</a>
+          <a href="#ribs">Ribs</a>
+          <a href="#vertebrae">Vertebrae</a>
+          <a href="#sternum">Sternum</a>
+        </nav>
+      </header>
 
   <!-- Lung -->
   <section class="section" id="lung">
