Change Pfeil Icon

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <a class="title" href="ribs.html" title="Open Ribs page">Ribs 3–6</a>
       <a class="jump" href="ribs.html" title="Open Ribs page">
         <svg viewBox="0 0 24 24" fill="none" stroke="#374151" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M7 17L17 7M7 7h10v10"/>
+          <path d="M5 12h14M12 5l7 7-7 7"/>
         </svg>
       </a>
     </div>
@@ -224,7 +224,7 @@
       <a class="title" href="vertebrae.html" title="Open Vertebrae page">Vertebrae T2–T10</a>
       <a class="jump" href="vertebrae.html" title="Open Vertebrae page">
         <svg viewBox="0 0 24 24" fill="none" stroke="#374151" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M7 17L17 7M7 7h10v10"/>
+          <path d="M5 12h14M12 5l7 7-7 7"/>
         </svg>
       </a>
     </div>
