--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
       --border:#e5e7eb;       
       --accent:#2563eb;
       --shadow:0 1px 3px rgba(0,0,0,.06), 0 6px 20px rgba(0,0,0,.05);
-      --header-max: 1200px;   
     }
     *{box-sizing:border-box}
     body{margin:0; font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial; background:var(--bg); color:var(--fg)}
   
     header{padding:28px 20px 8px; display:flex; justify-content:center}
-    .header-inner{width:100%; max-width:var(--header-max); text-align:center}
+    .header-inner{
+        width:100%;
+        max-width:none;     
+        text-align:center;
+    }
     
     .header-inner h1{
       margin:0 0 14px;
@@ -128,9 +131,9 @@
 
       <nav class="subnav" aria-label="Section navigation">
         <a href="#lung">Lung</a> |
+        <a href="#heart">Heart</a> |
         <a href="#ribs">Ribs</a> |
         <a href="#vertebrae">Vertebrae</a> |
-        <a href="#heart">Heart</a> |
         <a href="#sternum">Sternum</a>
       </nav>
     </div>
