--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     .header-inner p.lead{
       margin:8px 0 14px;
       color:var(--muted);
+      max-width: 1800px;
     }
   
     .subnav{
@@ -121,12 +122,10 @@
       <p class="lead">
         This website presents the interactive plots accompanying the report
         <em>“In search of truth: Evaluating concordance of AI-based anatomy segmentation models.”</em>
-        The homepage shows <strong>Volume</strong> and <strong>Dice</strong> plots for the groups
-        <em>Lung</em>, <em>Heart</em>, <em>Ribs</em>, <em>Vertebrae</em>, and <em>Sternum</em>,
-        each including <strong>all</strong> models considered in the analysis.
+        The startpage shows interactive<strong>Volume</strong> and <strong>Dice</strong> plots for all structure groups included in the analysis, with each plot including all models that provide a segmentation for the respective structure.
         For some groups, dedicated sub-pages provide additional plots based on our findings.
-        All plots are fully interactive — you can zoom, pan, and toggle models in the legend.
-        Use <strong>Open</strong> to launch the respective plot in a new window.
+        All plots are fully interactive: you can zoom, pan, and toggle models in the legend.
+        Use <em>Open</em> to launch the respective plot in a new window.
       </p>
 
       <nav class="subnav" aria-label="Section navigation">
