Add heart subpage

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     .header-inner p.lead{
       margin:8px 0 14px;
       color:var(--muted);
-      max-width: 1800px;
+      max-width: 1600px;
     }
   
     .subnav{
@@ -122,7 +122,7 @@
       <p class="lead">
         This website presents the interactive plots accompanying the report
         <em>“In search of truth: Evaluating concordance of AI-based anatomy segmentation models.”</em>
-        The startpage shows interactive<strong>Volume</strong> and <strong>Dice</strong> plots for all structure groups included in the analysis, with each plot including all models that provide a segmentation for the respective structure.
+        The startpage shows interactive <strong>Volume</strong> and <strong>Dice</strong> plots for all structure groups included in the analysis, with each plot including all models that provide a segmentation for the respective structure.
         For some groups, dedicated sub-pages provide additional plots based on our findings.
         All plots are fully interactive: you can zoom, pan, and toggle models in the legend.
         Use <em>Open</em> to launch the respective plot in a new window.
@@ -165,7 +165,14 @@
 
   <!-- Heart -->
   <section class="section" id="heart">
-    <div class="section-title"><span>Heart</span></div>
+    <div class="section-title">
+      <a class="title" href="heart.html" title="Open Heart page">Heart</a>
+      <a class="jump" href="heart.html" title="Open Heart page">
+        <svg viewBox="0 0 24 24" fill="none" stroke="#374151" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M5 12h14M12 5l7 7-7 7"/>
+        </svg>
+      </a>
+    </div>
     <div class="grid">
       <div class="card">
         <header>
