Adjust heart page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -32,7 +32,7 @@
     }
   
     .header-inner p.lead{
-      margin:8px 0 14px;
+      margin:8px auto 14px;
       color:var(--muted);
       max-width: 1600px;
     }
