Adjust rib page

--- a/ribs.html
+++ b/ribs.html
@@ -67,7 +67,7 @@
       
         <p class="lead">
             The rib plots show only moderate agreement across all models, mainly due to segmentation errors in four of the six models, which sometimes include parts of neighboring ribs. 
-            These errors are likely are result of fractured ribs in the training data. After excluding the affected models, agreement between MOOSE and CADS improves, with Dice scores above 80% and volume overlap up to 95%. 
+            These errors are likely a result of fractured ribs in the training data. After excluding the affected models, agreement between MOOSE and CADS improves, with Dice scores above 80% and volume overlap up to 95%. 
             Remaining differences are due to segmentation coverage: MOOSE fully includes the costovertebral joints, while CADS captures them only partially, resulting in consistently higher rib volumes for MOOSE.
         </p>
       
