Add sternum page

--- a/index.html
+++ b/index.html
@@ -261,7 +261,14 @@
 
   <!-- Sternum -->
   <section class="section" id="sternum">
-    <div class="section-title"><span>Sternum</span></div>
+    <div class="section-title">
+      <a class="title" href="sternum.html" title="Open Sternum page">Sternum</a>
+      <a class="jump" href="sternum.html" title="Open Sternum page">
+        <svg viewBox="0 0 24 24" fill="none" stroke="#374151" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M5 12h14M12 5l7 7-7 7"/>
+        </svg>
+      </a>
+    </div>
     <div class="grid">
       <div class="card">
         <header>
